@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.3.0
 
+  *) [TS-1427] PluginVCs now use a method similar to actual socket VCs
+   for firing inactivity timeout events
+
   *) [TS-1426] protection from NULL deref when using 
    TSHttpTxnOutgoingTransparencySet after a user agent has disconnected
 
